crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-ml-3.stderr
TOML parse error at line 1, column 35
  |
1 | bad-uni-esc-ml-3 = """val\U0000000"""
  |                                   ^
too few unicode value digits, expected unicode hexadecimal value
